# battleship

./: .gitignore  CMakeLists.txt
include/: battleship.h  battleship_tools.h  board.h  boat.h  common.h  file_stuff.h
src/: battleship.c  battleship_tools.c  board.c  boat.c  file_stuff.c
